--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/core": "~12.0.1",
     "@angular/forms": "~12.0.1",
     "@angular/material": "^12.2.7",
+    "@angular/material-moment-adapter": "^12.2.9",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
